# FeroUB

./: Cargo.toml  README.md  config.toml
src/: config.rs  main.rs  state.rs  util.rs
src/commands/: afk.rs  media.rs  messages.rs  meta.rs  mod.rs  storage.rs  system.rs
